--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development PORT=50051 webpack serve --config ./configs/webpack.config.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./configs/webpack.config.prod.js",
+    "build": "cross-env NODE_ENV=production node ./scripts/build.js",
     "start": "node -r @babel/register ./scripts/check-port-in-use.js && yarn dev"
   },
   "devDependencies": {
@@ -35,9 +35,11 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "file-loader": "^6.2.0",
+    "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.2.0",
     "prettier": "^2.3.2",
+    "react-dev-utils": "^11.0.4",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
@@ -63,5 +65,17 @@
     "react-dom": "^17.0.2",
     "react-refresh": "^0.10.0",
     "react-router-dom": "^5.2.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
