--- a/package.json
+++ b/package.json
@@ -1,61 +1,13 @@
 {
-  "name": "webpack-base",
+  "name": "mf-base-demo",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development PORT=50051 webpack serve --config ./configs/webpack.config.dev.js",
-    "build": "node ./scripts/build.js",
-    "start": "node ./scripts/start.js"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
-    "@babel/register": "^7.15.3",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
-    "@types/react": "^17.0.18",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
-    "babel-loader": "^8.2.2",
-    "chalk": "^4.1.2",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.2.0",
-    "css-minimizer-webpack-plugin": "^3.0.2",
-    "detect-port": "^1.3.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-formatter-pretty": "^4.1.0",
-    "eslint-import-resolver-webpack": "^0.13.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^10.0.0",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.2.0",
-    "prettier": "^2.3.2",
-    "react-dev-utils": "^11.0.4",
-    "rimraf": "^3.0.2",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "terser-webpack-plugin": "^5.1.4",
-    "type-fest": "^2.0.0",
-    "typescript": "^4.3.5",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.50.0",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0",
-    "webpackbar": "^5.0.0-3"
+    "build": "ezreal build",
+    "start": "ezreal start"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.15.3",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "ahooks": "^2.10.9",
@@ -64,8 +16,10 @@
     "notistack": "^1.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-refresh": "^0.10.0",
     "react-router-dom": "^5.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.3.5"
   },
   "browserslist": {
     "production": [
