--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "ezreal build",
-    "start": "ezreal start"
+    "build": "cross-env PORT=50051 ezreal build",
+    "start": "cross-env PORT=50051 ezreal start"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -19,6 +19,9 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "cross-env": "^7.0.3",
     "typescript": "^4.3.5"
   },
   "browserslist": {
